--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,27 @@
             <artifactId>testng</artifactId>
             <version>7.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.7.0</version>
+        </dependency>
     </dependencies>>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng_all.xml</suiteXmlFile>
+                        <suiteXmlFile>testng_negative.xml</suiteXmlFile>
+                        <suiteXmlFile>testng_positive.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
